<resources>
    <string name="app_name">Android_App_attendance_Alerts</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_login">Login</string>
    <string name="username_text">username</string>
    <string name="password_text">password</string>
    <string name="Login_text">LOG IN</string>
    <string name="logo_text">A3</string>
    <string name="calendar_text">View Academic Calendar</string>
    <string name="help_text">Need Help?</string>
    <string name="register_text">Register Here !!!</string>
    <string name="RePWD_text">Confirm Password :</string>
    <string name="save_text">SAVE</string>
    <string name="reset_text">RESET</string>
    <string name="PWD_text">Enter Password :</string>
    <string name="ID_text">ID NO. :</string>
    <string name="new_username_text">User Name :</string>
    <string name="new_register_text">New Registration</string>
    <string name="features_text">App Specifications</string>
    <string name="about_text">About</string>
    <string name="logo1_text">A3</string>
    <string name="use_text">How To Use?</string>
    <string name="title_activity_how_to_use">How_to_use</string>
    <string name="title_activity_app_features">App_features</string>
    <string name="title_activity_about">About</string>
    <string name="logo2_text">A3</string>
    <string name="name_text">APP Name:</string>
    <string name="a3_text">Android Application For attendance Alerts</string>
    <string name="guide_text">Guided By,</string>
    <string name="zn_text">Prof. Zunnun Narmawala</string>
    <string name="design_text">Designed By,</string>
    <string name="sanjay_text">Sanjay Chandlekar(14BIT009)</string>
    <string name="darpan_text">Darpan Patel(14BIT010)</string>
    <string name="darshan_text">Darshan Patel(14BIT033)</string>
    <string name="logo4_text">A3</string>
    <string name="support_text">This app supports any android device having OS greater than android 2.2 (Froyo) API 8.</string>
    <string name="key_text">Key Features</string>
    <string name="simple_text">A3 provides a simple and efficient way to keep track of daily attendance and receive notifications in order to make user present on time.</string>
    <string name="AC_text"># Academic Calendar of University</string>
    <string name="set_text"># Set holidays and Leaves on Calander</string>
    <string name="can_text"># Can be used by any Faculty of NU</string>
    <string name="p_protect_text"># Password Protectet the APP</string>
    <string name="smooth_text"># Simple and Smooth UI</string>
    <string name="logo5_text">A3</string>
    <string name="one_text">1. For the first time users have to register theirselves with their Name, ID No. and unique password to protect their account.</string>
    <string name="two_text">2. After registration user can login to his/her account and can view attaendance history, can receive notifications and set holidays and leaves on academic calendar.</string>
    <string name="three_text">3. Without registration or login, user can only able to see academic calendar of university.</string>
    <string name="four_text">4. For resolve any problem about the app user can contact help.</string>
    <string name="specifications_text">Specifications</string>
    <string name="title_activity_specifications">Specifications</string>
    <string name="Logout_text">Logout</string>
    <string name="logout_text">Log out</string>
    <string name="LogOut_text">Log Out</string>
    <string name="time_text">Set Time</string>
    <string name="date_text">Set Date</string>
    <string name="notify_text">Notify me !!</string>
    <string name="alarm_off.text">ALARM OFF</string>
    <string name="alarm_on">ALARM ON</string>
</resources>