<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.bublly.android_app_attendence_alerts.Specifications"
    tools:showIn="@layout/activity_specifications">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/logo4_text"
        android:id="@+id/textView37"
        android:background="#2c589b"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textStyle="bold|italic"
        android:textSize="55sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/support_text"
        android:id="@+id/textView38"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/textView37"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/key_text"
        android:id="@+id/textView39"
        android:textStyle="bold|italic"
        android:textSize="25sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView38" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/simple_text"
        android:id="@+id/textView40"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@+id/textView39"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/smooth_text"
        android:id="@+id/textView41"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@+id/textView40"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/AC_text"
        android:id="@+id/textView42"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@+id/textView41"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/set_text"
        android:id="@+id/textView43"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@+id/textView42"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/can_text"
        android:id="@+id/textView44"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@+id/textView43"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/p_protect_text"
        android:id="@+id/textView45"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@+id/textView44"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
