<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.bublly.android_app_attendence_alerts.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#e62c589b"
    android:textAlignment="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/logo_text"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textStyle="bold|italic"
        android:textSize="55sp"
        android:id="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:typeface="normal" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:hint="@string/username_text"
        android:textColor="#ffffff"
        android:textIsSelectable="false"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2"
        android:hint="@string/password_text"
        android:textColor="#ffffff"
        android:layout_alignParentEnd="true"
        android:textColorHint="#ffffff"
        android:textColorHighlight="#ffffff"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login_text"
        android:fontFamily="sans-serif"
        android:id="@+id/button"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:background="#56719a"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText2"
        android:layout_alignParentLeft="true"
         />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/register_text"
        android:id="@+id/textView2"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:editable="false"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp"
        android:typeface="serif" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/calendar_text"
        android:id="@+id/textView"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="57dp"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/help_text"
        android:id="@+id/textView3"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:typeface="serif" />


</RelativeLayout>
