<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.bublly.android_app_attendence_alerts.How_to_use"
    tools:showIn="@layout/activity_how_to_use">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/logo5_text"
        android:id="@+id/textView24"
        android:background="#2c589b"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textStyle="bold|italic"
        android:textSize="55sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/one_text"
        android:id="@+id/textView33"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/textView24"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/two_text"
        android:id="@+id/textView34"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/textView33"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/three_text"
        android:id="@+id/textView35"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/textView34"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/four_text"
        android:id="@+id/textView36"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/textView35"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
